--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 * {
+  
   font-family: sans-serif;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
+
 
 p {
   margin: 0;
