--- a/css/style.css
+++ b/css/style.css
@@ -97,10 +97,12 @@ li:hover {
     1px -1px 0 #474747 ,
     -1px 1px 0 #474747 ,
      1px 1px 0 #474747 ;
-  text-align: center;
+  padding-right: 2px;
+  line-height: 1;
   float:left;
-  height: 100%;
+  height: 80%;
   width: 60px;
+  margin: 10px;
   font-size: 130%;
   background-color: #b6b6b6;
   border: 1px solid black;
