--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ li:hover {
   float:left;
   height: 80%;
   width: 60px;
-  margin: 10px;
+  margin: 5px;
   font-size: 130%;
   background-color: #b6b6b6;
   border: 1px solid black;
@@ -149,6 +149,21 @@ p{
   height:15px;
 }
 
-
+.minus{
+  text-shadow:
+   -1px -1px 0 #474747 ,  
+    1px -1px 0 #474747 ,
+    -1px 1px 0 #474747 ,
+     1px 1px 0 #474747 ;
+  padding-right: 2px;
+  line-height: 1;
+  float:left;
+  height: 80%;
+  width: 60px;
+  margin: 10px;
+  font-size: 130%;
+  background-color: #b6b6b6;
+  border: 1px solid black;
+}
 
 }
